--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: linkable
 description: A Flutter widget to add links to your text. Linkable widget is a wrapper over RichText which allows you to render links that can be clicked to redirect to the URL.
-version: 3.0.2
+version: 0.0.1
+#version: 3.0.2
 homepage: https://github.com/AnupKumarPanwar/Linkable
 
 environment:
